// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute balance endpoint should batch requests 1`] = `
{
  "data": {
    "result": [
      {
        "address": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001",
        "balance": "32081209325",
      },
      {
        "address": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000002",
        "balance": "32081209326",
      },
      {
        "address": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000003",
        "balance": "32081209327",
      },
      {
        "address": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000004",
        "balance": "32081209328",
      },
      {
        "address": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000005",
        "balance": "32081209329",
      },
      {
        "address": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000006",
        "balance": "32081209330",
      },
      {
        "address": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000007",
        "balance": "32081209331",
      },
      {
        "address": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000008",
        "balance": "32081209332",
      },
      {
        "address": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000009",
        "balance": "32081209333",
      },
      {
        "address": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000a",
        "balance": "32081209334",
      },
    ],
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute balance endpoint should return error with empty addresses 1`] = `
{
  "error": {
    "message": "Input, at 'addresses' or 'result' path, must be a non-empty array.",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute balance endpoint should return success 1`] = `
{
  "data": {
    "result": [
      {
        "address": "0x8bdb63ea991f42129d6defa8d3cc5926108232c89824ad50d57f49a0310de73e81e491eae6587bd1465fa5fd8e4dee21",
        "balance": "32081209325",
      },
      {
        "address": "0xb672b5976879c6423ad484ba4fa0e76069684eed8e2a8081f6730907f3618d43828d1b399d2fd22d7961824594f73462",
        "balance": "32067790944",
      },
    ],
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute balance endpoint should return success with limbo validator balance 1`] = `
{
  "data": {
    "result": [
      {
        "address": "0x8bdb63ea991f42129d6defa8d3cc5926108232c89824ad50d57f49a0310de73e81e491eae6587bd1465fa5fd8e4dee21",
        "balance": "32081209325",
      },
      {
        "address": "0xb672b5976879c6423ad484ba4fa0e76069684eed8e2a8081f6730907f3618d43828d1b399d2fd22d7961824594f73462",
        "balance": "32067790944",
      },
      {
        "address": "0x98416f837d457d72f0dd5297898e1225a1e7731c2579f642626fbdc8ee8ce4f1e89ca538b72d5c3b75fdd1e9e10c87c6",
        "balance": "1000000000",
      },
    ],
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute balance endpoint should return success with validator that is not on the beacon chain 1`] = `
{
  "data": {
    "result": [
      {
        "address": "0x8bdb63ea991f42129d6defa8d3cc5926108232c89824ad50d57f49a0310de73e81e491eae6587bd1465fa5fd8e4dee21",
        "balance": "32081209325",
      },
      {
        "address": "0xb672b5976879c6423ad484ba4fa0e76069684eed8e2a8081f6730907f3618d43828d1b399d2fd22d7961824594f73462",
        "balance": "32067790944",
      },
      {
        "address": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
        "balance": "0",
      },
    ],
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute balance endpoint should wait before sending the next group 1`] = `
{
  "data": {
    "result": [
      {
        "address": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000011",
        "balance": "32081209325",
      },
      {
        "address": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000012",
        "balance": "32081209326",
      },
      {
        "address": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000013",
        "balance": "32081209327",
      },
      {
        "address": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000014",
        "balance": "32081209328",
      },
      {
        "address": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000015",
        "balance": "32081209329",
      },
      {
        "address": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000016",
        "balance": "32081209330",
      },
      {
        "address": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000017",
        "balance": "32081209331",
      },
      {
        "address": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000018",
        "balance": "32081209332",
      },
      {
        "address": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000019",
        "balance": "32081209333",
      },
      {
        "address": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001a",
        "balance": "32081209334",
      },
      {
        "address": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001b",
        "balance": "32081209335",
      },
      {
        "address": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001c",
        "balance": "32081209336",
      },
      {
        "address": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001d",
        "balance": "32081209337",
      },
    ],
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
